google site verification

--- a/apps/web-ui/index.html
+++ b/apps/web-ui/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="Ko4InVfE2SKCVbNmGF9fStvvlRQKsp57v6jM9aUIbMI" />
     <link rel="icon" type="image/svg+xml" href="/chuuniland.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Media Club</title>
